# template

./: README.md
.o/isnbh0-python/: README.md  cookiecutter.json
.o/isnbh0-python-kit-ko/hooks/: post_gen_project.py
.o/isnbh0-python-kit-ko/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  setup.sh
.o/isnbh0-python-kit-ko/{{cookiecutter.project_slug}}/.cursor/rules/: copyable-output.mdc  cursor-rules-location.mdc  dev-external-services.mdc  git-workflow.mdc  python-beginner-ko.mdc  python-best-practices.mdc  python-dependency-management.mdc
.o/isnbh0-python/hooks/: post_gen_project.py
.o/isnbh0-python/{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml
.o/isnbh0-python/{{cookiecutter.project_slug}}/.cursor/recipes/: git-commit.cursorrecipe  roadmap-task.cursorrecipe
.o/isnbh0-python/{{cookiecutter.project_slug}}/.cursor/rules/: clean-architecture-v2.md  cursor-rules-location.mdc  following-recipes.mdc  git-workflow.mdc  github-pr-creation.mdc  pytest-rules.md  python-best-practices.mdc  python-dependency-management.mdc
python/: README.md
python-uv/: .gitignore  README.md  cookiecutter.json
python-uv/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
python/hooks/: post_gen_project.py
python/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
